--- a/index.html
+++ b/index.html
@@ -25,18 +25,6 @@
         body {
             font-family: 'Work Sans', sans-serif;
         }
-
-        /* .disabled {
-            background-color: #cccccc55;
-            color: black;
-            cursor: not-allowed;
-        } */
-
-        /* .enable {
-            background-color: #e527b230;
-            color: white;
-            cursor: pointer;
-        } */
     </style>
 
 </head>
@@ -63,11 +51,12 @@
     <main class="xl:mx-60 xl:mt-20 mb-52 mx-10 mt-10">
         <section class="flex lg:gap-10 gap-2 justify-between flex-col md:flex-row relative">
             <!-- product div one  -->
+            <!-- kitchenware product div  -->
+
             <div>
                 <div class="mb-8 text-center md:text-left">
                     <h3 class="text-4xl font-semibold mb-24">Kitchenware</h3>
 
-                    <!-- kitchenware product div  -->
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                         <!-- product-1  -->
                         <div onclick="getTarget('prod-1','prod-1-title','prod-1-price')" id="prod-1"
@@ -122,6 +111,7 @@
                     </div>
                 </div>
                 <!-- product div two -->
+                <!-- Sportswear div  -->
                 <div class="mb-8 text-center md:text-left">
                     <h3 class="text-4xl font-semibold mb-24">Sportswear</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
@@ -176,6 +166,7 @@
                     </div>
                 </div>
                 <!-- product div three  -->
+                <!-- furniture div  -->
                 <div class="mb-8 text-center md:text-left">
                     <h3 class="text-4xl font-semibold mb-24">Furniture</h3>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
@@ -247,8 +238,7 @@
                 </div>
 
                 <!-- product name container  -->
-                <!-- <div id="pName-container" class=" mb-4"> -->
-                <ol start="1" type="1" id="orderd-list" class="mb-4">
+                <ol id="orderd-list" class="mb-4">
 
                 </ol>
                 <!-- </div> -->
@@ -259,9 +249,7 @@
                     <h4>Discount : <span id="discount"></span></h4>
                     <h4>Total : <span id="final-total"></span></h4>
                 </div>
-                <!-- <button id="purchase-btn"
-                    class="bg-[#E527B2] px-10 py-4 rounded-lg mt-12 text-white font-medium text-xl"></button> -->
-                <!-- Open the modal using ID.showModal() method -->
+
                 <button id="purchase-btn"
                     class=" bg-[#E527B2] px-10 py-4 rounded-lg mt-12 text-white font-medium text-xl">Make
                     Purchase</button>
@@ -269,7 +257,7 @@
                     <div class="modal-box text-center">
                         <img class="mx-auto" src="images/congo.png" alt="">
                         <h3 class="font-bold text-3xl md:text-5xl">Congratulations</h3>
-                        <p class="py-4">Your Purchase the product</p>
+                        <p class="py-4">You Purchase the product</p>
                         <div class="">
                             <form method="dialog mx-auto">
                                 <!-- if there is a button in form, it will close the modal -->
