--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 </head>
 
-<body>
-    <header class="xl:mx-60 xl:mt-20 mb-52 mx-10 mt-10">
+<body class="bg-[#F9F6E2]">
+    <header class="xl:mx-60 xl:pt-20 mb-52 mx-10 pt-10">
         <div class="flex flex-col-reverse md:flex-row items-center justify-between">
             <div class="w-full">
                 <h3 class="font-medium text-2xl md:text-[32px] mb-11">---SALE FEVER---</h3>
@@ -48,19 +48,19 @@
             </div>
         </div>
     </header>
-    <main class="xl:mx-60 xl:mt-20 mb-52 mx-10 mt-10">
-        <section class="flex lg:gap-10 gap-2 justify-between flex-col md:flex-row relative">
+    <main class="xl:mx-60 xl:mt-20  mx-10 mt-10 pb-5">
+        <section class="flex lg:gap-10 gap-6 justify-between flex-col md:flex-row relative">
             <!-- product div one  -->
             <!-- kitchenware product div  -->
 
             <div>
                 <div class="mb-8 text-center md:text-left">
-                    <h3 class="text-4xl font-semibold mb-24">Kitchenware</h3>
+                    <h3 class="text-4xl font-semibold mb-20">Kitchenware</h3>
 
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                         <!-- product-1  -->
                         <div onclick="getTarget('prod-1','prod-1-title','prod-1-price')" id="prod-1"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto w-28 h-32" src="images/prod1.png" alt="">
                             </div>
@@ -77,7 +77,7 @@
 
                         <!-- product-2  -->
                         <div onclick="getTarget('prod-2','prod-2-title','prod-2-price')" id="prod-2"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto  w-28 h-32" src="images/prod2.png" alt="">
                             </div>
@@ -94,7 +94,7 @@
 
                         <!-- product-3  -->
                         <div onclick="getTarget('prod-3','prod-3-title','prod-3-price')" id="prod-3"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto w-28 h-32" src="images/prod3.png" alt="">
                             </div>
@@ -113,11 +113,11 @@
                 <!-- product div two -->
                 <!-- Sportswear div  -->
                 <div class="mb-8 text-center md:text-left">
-                    <h3 class="text-4xl font-semibold mb-24">Sportswear</h3>
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <h3 class="text-4xl font-semibold my-20">Sportswear</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                         <!-- product 4  -->
                         <div onclick="getTarget('prod-4','prod-4-title','prod-4-price')" id="prod-4"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2  rounded-lg">
                                 <img class="mx-auto w-28 h-32" src="images/prod4.png" alt="">
                             </div>
@@ -133,7 +133,7 @@
                         </div>
                         <!-- product 5  -->
                         <div onclick="getTarget('prod-5','prod-5-title','prod-5-price')" id="prod-5"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto  w-28 h-32" src="images/prod5.png" alt="">
                             </div>
@@ -149,7 +149,7 @@
                         </div>
                         <!-- product 6 -->
                         <div onclick="getTarget('prod-6','prod-6-title','prod-6-price')" id="prod-6"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto w-28 h-32" src="images/prod6.png" alt="">
                             </div>
@@ -168,11 +168,11 @@
                 <!-- product div three  -->
                 <!-- furniture div  -->
                 <div class="mb-8 text-center md:text-left">
-                    <h3 class="text-4xl font-semibold mb-24">Furniture</h3>
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <h3 class="text-4xl font-semibold my-20">Furniture</h3>
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                         <!-- product 7  -->
                         <div onclick="getTarget('prod-7','prod-7-title','prod-7-price')" id="prod-7"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto w-28 h-32" src="images/prod7.png" alt="">
                             </div>
@@ -188,7 +188,7 @@
                         </div>
                         <!-- product 8  -->
                         <div onclick="getTarget('prod-8','prod-8-title','prod-8-price')" id="prod-8"
-                            class="text-center p-5 rounded-lg product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto  w-28 h-32" src="images/prod8.png" alt="">
                             </div>
@@ -204,7 +204,7 @@
                         </div>
                         <!-- product 9  -->
                         <div onclick="getTarget('prod-9','prod-9-title','prod-9-price')" id="prod-9"
-                            class="text-center p-5 rounded-3xl product">
+                            class="text-center p-5 rounded-lg product bg-white">
                             <div class="bg-slate-100 mb-5 lg:px-12 lg:py-8 px-8 py-2 rounded-lg">
                                 <img class="mx-auto w-28 h-32" src="images/prod9.png" alt="">
                             </div>
@@ -224,8 +224,8 @@
 
 
             <!-- cart div  -->
-            <div class="mt-36">
-                <div class="form-control mb-4">
+            <div class="xl:mt-[136px] md:mt-[118px] ">
+                <div class="form-control mb-4 bg-white p-4 rounded-lg">
                     <label class="label">
                         <span class="label-text font-medium text-2xl">Have coupon?</span>
                     </label>
@@ -238,20 +238,23 @@
                 </div>
 
                 <!-- product name container  -->
-                <ol id="orderd-list" class="mb-4">
+                <div class="mb-4">
+                    <ol id="orderd-list" class="bg-white rounded-lg">
 
-                </ol>
+                    </ol>
+                </div>
                 <!-- </div> -->
                 <hr class="w-full">
                 <!-- product price container -->
-                <div class="pPrice-container text-2xl font-medium space-y-4 mt-4">
+                <div class="pPrice-container text-2xl font-medium space-y-4 mt-4 bg-white p-4 rounded-lg">
                     <h4>Total price : <span id="total-price">0</span></h4>
                     <h4>Discount : <span id="discount"></span></h4>
                     <h4>Total : <span id="final-total"></span></h4>
                 </div>
 
                 <button id="purchase-btn"
-                    class=" bg-[#E527B2] px-10 py-4 rounded-lg mt-12 text-white font-medium text-xl">Make
+                    class=" bg-[#e527b230] px-10 py-4 rounded-lg mt-12 text-white font-medium text-xl w-full"
+                    disabled>Make
                     Purchase</button>
                 <dialog id="my_modal_1" class="modal w-full">
                     <div class="modal-box text-center">
